--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MarvelApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/red1</item>
+        <item name="colorPrimaryVariant">@color/red2</item>
+        <item name="android:statusBarColor">@color/red1</item>
     </style>
 
     <style name="Theme.MarvelApp" parent="Base.Theme.MarvelApp" />
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/yellow2</item>
+    </style>
 </resources>
