--- a/app/src/main/res/layout/fragment_search_character.xml
+++ b/app/src/main/res/layout/fragment_search_character.xml
@@ -6,10 +6,11 @@
     android:background="@color/black1"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Personagens."
+        android:text="Pesquisar."
         android:textSize="30sp"
         android:fontFamily="@font/bangers"
         android:textColor="@color/yellow2"
@@ -19,21 +20,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerHeadlines"
+    <EditText
+        android:id="@+id/searchEdit"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="50dp"
+        android:layout_height="wrap_content"
+        android:hint="Pesquisar personagem..."
         android:layout_marginTop="70dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="8dp"
+        android:padding="8dp"
+        android:textSize="14sp"
+        android:fontFamily="@font/bangers"
+        android:drawableTint="@color/yellow2"
+        android:background="@drawable/search_border"
+        android:drawableEnd="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerSearch"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingBottom="50dp"
+        android:clipToPadding="false"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchEdit"
+        tools:layout_editor_absoluteX="0dp" />
+
     <include
-        android:id="@+id/itemHeadlinesError"
+        android:id="@+id/itemSearchError"
         layout="@layout/item_error"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,6 +64,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <ProgressBar
         android:id="@+id/paginationProgressBar"
         style="?attr/progressBarStyle"
