add themes, status bar color and hide api key

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/ic_charachter3" />
 
     <item android:id="@+id/favouritesFragment"
-        android:title="Favouritos"
+        android:title="Favoritos"
         android:icon="@drawable/ic_fav"/>
 
     <item android:id="@+id/searchFragment"
