--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MarvelApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.MarvelApp" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/red1</item>
+        <item name="colorPrimaryVariant">@color/red2</item>
+        <item name="android:statusBarColor">@color/red1</item>
+    </style>
+    <style name="Theme.MarvelApp" parent="Base.Theme.MarvelApp" />
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/yellow2</item>
     </style>
 </resources>
