--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MarvelApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.MarvelApp" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/red1</item>
         <item name="colorPrimaryVariant">@color/red2</item>
