--- a/app/src/main/res/layout/item_error.xml
+++ b/app/src/main/res/layout/item_error.xml
@@ -24,6 +24,7 @@
             android:textAlignment="center" />
         <Button
             android:id="@+id/retryButton"
+            android:backgroundTint="@color/yellow2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
