--- a/app/src/main/res/layout/fragment_characters_list.xml
+++ b/app/src/main/res/layout/fragment_characters_list.xml
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerCharacters"
+        android:id="@+id/recycler_Characters"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
