--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -30,10 +30,10 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvNameCharacter"
-            android:fontFamily="@font/bangers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/bangers"
             android:text="@string/tx_item_name"
             android:textColor="@color/black"
             android:textSize="25sp"
@@ -46,10 +46,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/tv_item_description"
             android:textAlignment="inherit"
-            android:textSize="18sp"
             android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tvNameCharacter"
             app:layout_constraintTop_toBottomOf="@+id/tvNameCharacter" />
     </androidx.constraintlayout.widget.ConstraintLayout>
