--- a/app/src/main/res/layout/fragment_search_character.xml
+++ b/app/src/main/res/layout/fragment_search_character.xml
@@ -1,45 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/black1"
-    android:paddingTop="65dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black1"
+    android:paddingTop="65dp">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pesquisar."
-        android:textSize="30sp"
-        android:fontFamily="@font/bangers"
-        android:textColor="@color/yellow2"
-        android:textStyle="bold"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:fontFamily="@font/bangers"
+        android:text="Pesquisar."
+        android:textColor="@color/yellow2"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-   <EditText
-    android:id="@+id/searchEdit"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Search news..."
-    android:layout_marginTop="70dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="8dp"
-    android:padding="8dp"
-    android:textSize="14sp"
-    android:fontFamily="@font/bangers"
-    android:drawableTint="@color/yellow2"
-    android:background="@drawable/search_border"
-    android:drawableEnd="@drawable/ic_search"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/edSearchCharacter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/search_border"
+        android:drawableEnd="@drawable/ic_search"
+        android:drawableTint="@color/yellow2"
+        android:fontFamily="@font/bangers"
+        android:hint="Pesquise um personagem..."
+        android:textColorHint="@color/yellow2"
+        android:padding="8dp"
+        android:textColor="@color/yellow2"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSearchCharacter"
@@ -51,8 +52,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchEdit"
-        tools:listitem="@layout/item_character"/>
+        app:layout_constraintTop_toBottomOf="@+id/edSearchCharacter"
+        tools:listitem="@layout/item_character" />
 
     <ProgressBar
         android:id="@+id/progressbarSearch"
