--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,35 +7,36 @@
 
     <fragment
         android:id="@+id/detailsCharacterFragment"
-        tools:layout="@layout/fragment_details_character"
         android:name="br.com.aline.marvel_app.ui.details.DetailsCharacterFragment"
-        android:label="DetailsCharacterFragment" />
-    <fragment
-        android:id="@+id/favoriteCharacterFragment"
-        tools:layout="@layout/fragment_favorite_character"
-        android:name="br.com.aline.marvel_app.ui.favorite.FavoriteCharacterFragment"
-        android:label="FavoriteCharacterFragment" >
-        <action
-            android:id="@+id/action_favoriteCharacterFragment_to_detailsCharacterFragment"
-            app:destination="@id/detailsCharacterFragment" />
+        android:label="DetailsCharacterFragment"
+        tools:layout="@layout/fragment_details_character">
         <argument
-            android:name="characterId"
+            android:name="character"
             app:argType="br.com.aline.marvel_app.data.model.character.CharacterModel" />
     </fragment>
     <fragment
+        android:id="@+id/favoriteCharacterFragment"
+        android:name="br.com.aline.marvel_app.ui.favorite.FavoriteCharacterFragment"
+        android:label="FavoriteCharacterFragment"
+        tools:layout="@layout/fragment_favorite_character">
+        <action
+            android:id="@+id/action_favoriteCharacterFragment_to_detailsCharacterFragment"
+            app:destination="@id/detailsCharacterFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/listCharacterFragment"
-        tools:layout="@layout/fragment_list_character"
         android:name="br.com.aline.marvel_app.ui.list.ListCharacterFragment"
-        android:label="ListCharacterFragment" >
+        android:label="ListCharacterFragment"
+        tools:layout="@layout/fragment_list_character">
         <action
             android:id="@+id/action_listCharacterFragment_to_detailsCharacterFragment"
             app:destination="@id/detailsCharacterFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchCharacterFragment"
-        tools:layout="@layout/fragment_search_character"
         android:name="br.com.aline.marvel_app.ui.search.SearchCharacterFragment"
-        android:label="SearchCharacterFragment" >
+        android:label="SearchCharacterFragment"
+        tools:layout="@layout/fragment_search_character">
         <action
             android:id="@+id/action_searchCharacterFragment_to_detailsCharacterFragment"
             app:destination="@id/detailsCharacterFragment" />
