--- a/app/src/main/res/layout/fragment_search_character.xml
+++ b/app/src/main/res/layout/fragment_search_character.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/bangers"
-        android:text="Pesquisar."
+        android:text="Pesquisar"
         android:textColor="@color/yellow2"
         android:textSize="30sp"
         android:textStyle="bold"
