--- a/app/src/main/res/layout/item_comic.xml
+++ b/app/src/main/res/layout/item_comic.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     app:cardMaxElevation="2dp"
     android:backgroundTint="@color/yellow2"
-    app:strokeColor="@color/white"
+    app:strokeColor="@color/red2"
     app:strokeWidth="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
