--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -28,6 +28,19 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@color/red2"
+            android:src="@drawable/ic_fav"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionCharacter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgCharacter" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvNameCharacter"
             android:layout_width="wrap_content"
