add button to favorites

--- a/app/src/main/res/layout/fragment_favorite_character.xml
+++ b/app/src/main/res/layout/fragment_favorite_character.xml
@@ -16,7 +16,8 @@
         android:text="Favoritos."
         android:textColor="@color/yellow2"
         android:textSize="30sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFavoriteCharacter"
